[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Sprites/title.png" type="Texture" id=1]
[ext_resource path="res://Assets/Music/low.mp3" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Menu/Main.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/bomb.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Menu/Game.gd" type="Script" id=6]
[ext_resource path="res://Assets/Music/lollipops.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/boom.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sprites/nuke.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Menu/Scores.gd" type="Script" id=10]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Screens" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="Screens"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Screens/Main"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Screens/Main/CenterContainer"]
margin_left = 50.0
margin_top = 235.0
margin_right = 382.0
margin_bottom = 532.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Screens/Main/CenterContainer/VBoxContainer"]
margin_right = 332.0
margin_bottom = 197.0

[node name="Title" type="TextureRect" parent="Screens/Main/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 332.0
margin_bottom = 197.0
texture = ExtResource( 1 )

[node name="CenterContainer3" type="CenterContainer" parent="Screens/Main/CenterContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 332.0
margin_bottom = 247.0

[node name="HBoxContainer" type="HBoxContainer" parent="Screens/Main/CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 53.0
margin_right = 279.0
margin_bottom = 46.0
alignment = 1

[node name="Score" type="Label" parent="Screens/Main/CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 226.0
margin_bottom = 46.0
text = "HIGH SCORE: "
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="Screens/Main/CenterContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 332.0
margin_bottom = 297.0

[node name="HBoxContainer" type="HBoxContainer" parent="Screens/Main/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 41.0
margin_right = 290.0
margin_bottom = 46.0
alignment = 1

[node name="Prompt" type="Label" parent="Screens/Main/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 249.0
margin_bottom = 46.0
text = "Press 'Z' to Play"
align = 1

[node name="Scores" type="Control" parent="Screens"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Screens/Scores"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Screens/Scores/CenterContainer"]
margin_left = 31.0
margin_top = 336.0
margin_right = 401.0
margin_bottom = 432.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Screens/Scores/CenterContainer/VBoxContainer"]
margin_right = 370.0
margin_bottom = 46.0

[node name="Score" type="Label" parent="Screens/Scores/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 81.0
margin_right = 288.0
margin_bottom = 46.0
text = "SCORE: 0000"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="Screens/Scores/CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 370.0
margin_bottom = 96.0

[node name="HBoxContainer" type="HBoxContainer" parent="Screens/Scores/CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 370.0
margin_bottom = 46.0
alignment = 1

[node name="Prompt" type="Label" parent="Screens/Scores/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 370.0
margin_bottom = 46.0
text = "Press 'Z' to CONTINUE"
align = 1

[node name="Game" type="Control" parent="Screens"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SCORE" type="Label" parent="Screens/Game"]
margin_right = 40.0
margin_bottom = 46.0
text = "SCORE: 9999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bombs" type="HBoxContainer" parent="Screens/Game"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 284.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureRect" parent="Screens/Game/Bombs"]
margin_right = 23.0
margin_bottom = 20.0
texture = ExtResource( 5 )

[node name="2" type="TextureRect" parent="Screens/Game/Bombs"]
margin_left = 27.0
margin_right = 50.0
margin_bottom = 20.0
texture = ExtResource( 5 )

[node name="3" type="TextureRect" parent="Screens/Game/Bombs"]
margin_left = 54.0
margin_right = 77.0
margin_bottom = 20.0
texture = ExtResource( 5 )

[node name="Health" type="HBoxContainer" parent="Screens/Game"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -139.0
margin_top = 15.0
margin_right = -23.0
margin_bottom = 30.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="ColorRect" parent="Screens/Game/Health"]
margin_left = 12.0
margin_right = 27.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 0 )

[node name="2" type="ColorRect" parent="Screens/Game/Health"]
margin_left = 31.0
margin_right = 46.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 0 )

[node name="3" type="ColorRect" parent="Screens/Game/Health"]
margin_left = 50.0
margin_right = 65.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 0 )

[node name="4" type="ColorRect" parent="Screens/Game/Health"]
margin_left = 69.0
margin_right = 84.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 0 )

[node name="5" type="ColorRect" parent="Screens/Game/Health"]
margin_left = 88.0
margin_right = 103.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 0 )

[node name="Nuke" type="TextureRect" parent="Screens/Game"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -450.0
margin_right = 450.0
margin_bottom = 450.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ColorRect"]

[node name="Music" type="Node" parent="."]

[node name="Main1" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 2 )

[node name="Main2" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 7 )

[node name="Main3" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 2 )
pitch_scale = 1.2

[node name="Sounds" type="Node" parent="."]

[node name="Nuke" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = -15.0
